--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 html,
 body {
   padding: 0;
@@ -9,16 +8,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
 a {
-  color: inherit;
-  text-decoration: none;
+  @apply text-blue-600 hover:text-blue-800;
 }
-
 * {
   box-sizing: border-box;
 }
-
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -28,17 +23,18 @@ a {
     background: black;
   }
 }
-
 .card {
   @apply mb-5 block rounded-lg border border-gray-200 shadow-md;
 }
-
 .primary-button {
   @apply rounded bg-amber-300 py-2 px-4 shadow outline-none hover:bg-amber-400 active:bg-amber-500;
 }
-
 input,
 select,
 textarea {
   @apply rounded border p-2  outline-none ring-indigo-300  focus:ring;
+}
+
+.dropdown-link {
+  @apply flex flex-col p-2 hover:bg-gray-200;
 }
